# rustcode

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  code_review.toml  deny.toml  docker-compose.yml  file_summary.toml  rustcode_lint_report.md  todo_scan.toml
.github/workflows/: ci.yml  release.yml
crates/api/: Cargo.toml
crates/api/benches/: prompt_cache_bench.rs
crates/api/src/: client.rs  lib.rs  prompt_cache.rs  sse.rs  types.rs
crates/api/src/providers/: anthropic.rs  mod.rs  openai_compat.rs
crates/api/tests/: client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs
crates/commands/src/: lib.rs
crates/github-client/: Cargo.toml
crates/github-client/src/: client.rs  error.rs  lib.rs  models.rs
crates/mock-anthropic-service/src/: lib.rs
crates/plugins/bundled/code-review/: README.md
crates/plugins/bundled/code-review/.claude-plugin/: plugin.json
crates/plugins/bundled/file-summary/: README.md
crates/plugins/bundled/file-summary/.claude-plugin/: plugin.json
crates/plugins/bundled/todo-scan/: README.md
crates/plugins/bundled/todo-scan/.claude-plugin/: plugin.json
crates/plugins/src/: hooks.rs  lib.rs
crates/rag/: Cargo.toml
crates/rag/src/: chunking.rs  code_chunker.rs  file_language.rs  lib.rs  vector_index.rs
crates/runtime/src/: bash.rs  bash_validation.rs  compact.rs  config.rs  conversation.rs  file_ops.rs  hooks.rs  json.rs  lane_events.rs  lib.rs  lsp_client.rs  mcp_lifecycle_hardened.rs  mcp_stdio.rs  mcp_tool_bridge.rs  oauth.rs  permission_enforcer.rs  permissions.rs  plugin_lifecycle.rs  policy_engine.rs  prompt.rs  recovery_recipes.rs  remote.rs  sandbox.rs  session.rs  session_control.rs  stale_branch.rs  summary_compression.rs  task_packet.rs  task_registry.rs  team_cron_registry.rs  trust_resolver.rs  usage.rs  worker_boot.rs
crates/runtime/tests/: integration_tests.rs
crates/rusty-claude-cli/: Cargo.toml
crates/rusty-claude-cli/src/: app.rs  args.rs  init.rs  input.rs  main.rs  render.rs
crates/rusty-claude-cli/src/app/: streaming.rs  streaming_renderer.rs
crates/rusty-claude-cli/tests/: api_integration.rs  cli_flags_and_config_defaults.rs  mock_parity_harness.rs  resume_slash_commands.rs
crates/telemetry/src/: lib.rs
crates/tools/src/: lane_completion.rs  lib.rs
scripts/: release.sh  smoke_test.sh
sql/: 001_core_schema.sql  001_init.sql  001_simplified_tasks.sql  002_github_integration.sql  003_scan_progress.sql  004_require_git_url.sql  005_notes_enhancements.sql  006_documents.sql  007_ideas.sql  008_fix_scan_events.sql  009_queue_items.sql  010_scan_checkpoints.sql  011_scan_progress_enhanced.sql  012_add_review_requested.sql  013_add_task_core_columns.sql  014_add_cache_hash.sql  015_registered_repos.sql  016_add_document_pinned.sql  017_drop_todo_items.sql  018_chunks_integer_to_bigint.sql  019_multi_tenant_tables.sql  020_documents_integer_to_bigint.sql  021_audit_runs.sql  022_simplified_tasks.sql  023_agent_memory.sql  024_repo_skip_extensions.sql  025_cache_tables.sql
src/: auth.rs  auto_scanner.rs  cache.rs  cache_layer.rs  cache_migrate.rs  chunking.rs  code_chunker.rs  code_review.rs  config.rs  context.rs  context_builder.rs  context_llm.rs  cost_tracker.rs  directory_tree.rs  doc_generator.rs  embeddings.rs  enhanced_scanner.rs  error.rs  formatter.rs  git.rs  grok_client.rs  grok_reasoning.rs  indexing.rs  lib.rs  llm_audit.rs  llm_config.rs  metrics.rs  model_router.rs  multi_tenant.rs  ollama_client.rs  parser.rs  prompt_hashes.rs  prompt_router.rs  query_analytics.rs  query_router.rs  query_templates.rs  refactor_assistant.rs  repo_analysis.rs  repo_cache.rs  repo_cache_sql.rs  (+24 more)
src/agent/: mod.rs  pipeline.rs  tools.rs  types.rs
src/api/: admin.rs  agent.rs  auth.rs  handlers.rs  jobs.rs  memory.rs  mod.rs  proxy.rs  proxy_client.rs  rate_limit.rs  repos.rs  tool_run.rs  types.rs
src/audit/: cache.rs  endpoint.rs  full_audit.rs  mod.rs  report.rs  runner.rs  tasks.rs  types.rs
src/backup/: mod.rs
src/cache/: audit.rs  layer.rs  migrate.rs  mod.rs  responses.rs
src/cli/: github_commands.rs  mod.rs  queue_commands.rs  research_backup_commands.rs  task_commands.rs
src/context/: global.rs  mod.rs  rag.rs
src/db/: chunks.rs  config.rs  core.rs  documents.rs  mod.rs  queue.rs  scan_events.rs
src/github/: README.md  background_sync.rs  client.rs  mod.rs  models.rs  search.rs  sync.rs  webhook.rs
src/llm/: compat.rs  grok.rs  grok_client.rs  mod.rs  ollama.rs  router.rs  simple_client.rs
src/llm/usage/: costs.rs  mod.rs
src/memory/: mod.rs  store.rs  types.rs
src/queue/: mod.rs  processor.rs
src/repo/: analysis.rs  cache.rs  file_cache.rs  manager.rs  mod.rs  sync.rs
src/research/: aggregator.rs  mod.rs  worker.rs
src/scanner/: compat.rs  enhanced.rs  github.rs  mod.rs
src/task/: automerge.rs  grouping.rs  mod.rs  models.rs  schema.rs
src/todo/: mod.rs  planner.rs  scaffolder.rs  scanner.rs  sync.rs  todo_file.rs  worker.rs
tests/: test_grok_integration.rs
