# ============================================================================
# rustcode — AI coding assistant
# ============================================================================
# Dual-mode Cargo.toml:
#
#   STANDALONE  — open rustcode/ directly in your IDE or run `cargo build`
#                 from inside it.  The [workspace] section below is active
#                 and supplies every `workspace = true` inheritance.
#
#   INSIDE FKS  — the FKS root Cargo.toml is the workspace root, so Cargo
#                 ignores the [workspace] block here and inherits from FKS.
# ============================================================================

[package]
name       = "rustcode"
version    = "0.1.0"
edition    = "2024"
authors    = ["nuniesmith"]
license    = "MIT"
repository = "https://github.com/nuniesmith/rustcode"
publish    = false

# ============================================================================
# Workspace — active only when rustcode/ is the workspace root (standalone).
# Ignored when nested inside FKS.
# ============================================================================

[workspace]
resolver = "2"
members  = [
    ".",
    "crates/api",
    "crates/commands",
    "crates/compat-harness",
    "crates/mock-anthropic-service",
    "crates/plugins",
    "crates/runtime",
    "crates/rusty-claude-cli",
    "crates/telemetry",
    "crates/tools",
]

[workspace.package]
version    = "0.1.0"
edition    = "2024"
authors    = ["nuniesmith"]
license    = "MIT"
repository = "https://github.com/nuniesmith/rustcode"
publish    = false

[workspace.dependencies]
# Async runtime
tokio        = { version = "1.51.0", features = ["full"] }
futures      = "0.3.32"
futures-util = "0.3.32"
async-trait  = "0.1.89"

# HTTP & web
axum       = { version = "0.8.8", features = ["macros", "ws"] }
reqwest    = { version = "0.13.2", features = ["json", "rustls"], default-features = false }
tower      = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
hyper      = "1.9.0"

# Serialization
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml       = "0.8"

# Database
redis = { version = "1.2.0", features = ["tokio-comp", "connection-manager"] }
sqlx  = { version = "0.8.6", default-features = false, features = [
    "postgres",
    "sqlite",
    "migrate",
    "uuid",
    "chrono",
    "macros",
    "runtime-tokio",
    "tls-rustls-ring",
] }

# Logging & tracing
tracing                            = "0.1.44"
tracing-subscriber                 = { version = "0.3.23", features = ["env-filter", "json", "registry", "fmt"] }
tracing-appender                   = "0.2.4"
tracing-opentelemetry              = "0.32.1"
opentelemetry                      = "0.31.0"
opentelemetry-otlp                 = { version = "0.31.1", features = ["grpc-tonic"] }
opentelemetry_sdk                  = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.31.0"

# Error handling
anyhow    = "1.0.102"
thiserror = "2.0.18"

# Cryptography
hmac   = "0.12"
sha2   = "0.10"
hex    = "0.4.3"
ring   = "0.17.14"
base64 = "0.22.1"

# Time & date
chrono = { version = "0.4.44", features = ["serde"] }

# Configuration
config  = "0.15.22"
dotenvy = "0.15.7"

# Utilities
rand        = "0.9"
rayon       = "1.11.0"
uuid        = { version = "1.23.0", features = ["v4", "serde"] }
bytes       = "1.11.1"
parking_lot = "0.12.5"
url         = "2.5.8"
regex       = "1.12.3"
walkdir     = "2.5.0"
git2        = "0.20.4"
notify      = { version = "8.2.0", features = ["macos_kqueue"] }
md5         = "0.7"
ignore      = "0.4.25"
zstd        = "0.13"

# JWT & auth
jsonwebtoken = "10.3.0"

# ML / AI
fastembed = "5.13.0"

# CLI
clap    = { version = "4.6.0", features = ["derive", "env"] }
colored = "3.1.1"

# Metrics
prometheus = "0.14.0"

# Misc workspace-only
deadpool-redis  = { version = "0.23.0" }
bincode         = "1.3"
dirs            = "5"
syn             = { version = "2", features = ["full"] }
tokio-stream    = { version = "0.1", features = ["sync"] }
urlencoding     = "2.1.3"
async-recursion = "1"
shellexpand     = "3.1.2"

# Testing
tokio-test = "0.4.5"
mockito    = "1.7.2"
tempfile   = "3.27.0"
criterion  = { version = "0.5", features = ["async_tokio"] }

[workspace.lints.rust]
unsafe_code  = "warn"
missing_docs = "allow"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
module_name_repetitions = "allow"
must_use_candidate      = "allow"

# ============================================================================
# Binaries
# ============================================================================

[[bin]]
name = "rustcode"
path = "src/bin/server.rs"

[[bin]]
name = "rustcode-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "github-sync-daemon"
path = "src/bin/github-sync-daemon.rs"

# ============================================================================
# Dependencies
# ============================================================================

[dependencies]

# Internal crates
api = { path = "crates/api" }

# All deps inherit versions from [workspace.dependencies] above
anyhow                             = { workspace = true }
async-recursion                    = { workspace = true }
async-trait                        = { workspace = true }
axum                               = { workspace = true }
base64                             = { workspace = true }
bincode                            = { workspace = true }
bytes                              = { workspace = true }
chrono                             = { workspace = true }
clap                               = { workspace = true }
colored                            = { workspace = true }
config                             = { workspace = true }
deadpool-redis                     = { workspace = true }
dirs                               = { workspace = true }
dotenvy                            = { workspace = true }
fastembed                          = { workspace = true }
futures                            = { workspace = true }
futures-util                       = { workspace = true }
git2                               = { workspace = true }
hex                                = { workspace = true }
hmac                               = { workspace = true }
hyper                              = { workspace = true }
ignore                             = { workspace = true }
jsonwebtoken                       = { workspace = true }
md5                                = { workspace = true }
notify                             = { workspace = true }
opentelemetry                      = { workspace = true }
opentelemetry-otlp                 = { workspace = true }
opentelemetry_sdk                  = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
parking_lot                        = { workspace = true }
prometheus                         = { workspace = true }
rand                               = { workspace = true }
rayon                              = { workspace = true }
redis                              = { workspace = true }
regex                              = { workspace = true }
reqwest                            = { workspace = true }
ring                               = { workspace = true }
shellexpand                        = { workspace = true }
serde                              = { workspace = true }
serde_json                         = { workspace = true }
sha2                               = { workspace = true }
sqlx                               = { workspace = true }
syn                                = { workspace = true }
thiserror                          = { workspace = true }
tokio                              = { workspace = true }
tokio-stream                       = { workspace = true }
toml                               = { workspace = true }
tower                              = { workspace = true }
tower-http                         = { workspace = true }
tracing                            = { workspace = true }
tracing-appender                   = { workspace = true }
tracing-opentelemetry              = { workspace = true }
tracing-subscriber                 = { workspace = true }
url                                = { workspace = true }
urlencoding                        = { workspace = true }
uuid                               = { workspace = true }
walkdir                            = { workspace = true }
zstd                               = { workspace = true }

# ============================================================================
# Dev dependencies
# ============================================================================

[dev-dependencies]
tokio-test = { workspace = true }
mockito    = { workspace = true }
tempfile   = { workspace = true }
criterion  = { workspace = true }

# ============================================================================
# Build profiles
# ============================================================================

[profile.dev]
opt-level = 0
debug     = true

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 16
strip         = true
debug         = false
panic         = "abort"

[profile.release-with-debug]
inherits = "release"
debug    = true
strip    = false

[profile.ci]
inherits      = "release"
lto           = false
codegen-units = 256

# ============================================================================
# Lints
# ============================================================================

[lints]
workspace = true
