[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
futures.workspace = true
futures-util.workspace = true
hex.workspace = true
hmac.workspace = true
parking_lot.workspace = true
rand.workspace = true
redis.workspace = true
reqwest.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
zstd.workspace = true

# Internal crates
runtime = { path = "../runtime" }
telemetry = { path = "../telemetry" }

[dev-dependencies]
# Inherit from workspace
tokio-test.workspace = true
mockito.workspace = true
tempfile.workspace = true
criterion.workspace = true
# Add runtime for test helpers
runtime = { path = "../runtime" }

[[bench]]
name = "prompt_cache_bench"
harness = false
