[package]
name = "github-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace      = true
reqwest.workspace     = true
rustls.workspace      = true
serde.workspace       = true
serde_json.workspace  = true
sqlx.workspace        = true
thiserror.workspace   = true
tokio.workspace       = true
tracing.workspace     = true
urlencoding.workspace = true

[lints]
workspace = true
